--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
   text-decoration: none;
   color: #fff;
   font-weight: bold;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   transition: 0.8s;
   /* width: 120px;
   justify-content: center;
