--- a/src/components/patients.css
+++ b/src/components/patients.css
@@ -83,3 +83,9 @@ select {
   justify-content: center;
   align-items: center;
   }
+  .Head{
+    outline: 1px solid black;
+      border: 1px solid #ccc;
+        border-radius: 5px;
+      box-shadow: 1px 1px 20px rgba(230, 11, 11, 0.3);
+  }
