--- a/src/components/bg.css
+++ b/src/components/bg.css
@@ -9,3 +9,10 @@
       border-radius: 5px;
     box-shadow: 1px 1px 20px rgba(230, 11, 11, 0.3);
 }
+.box{
+  outline: 1px solid black;
+    border: 1px solid #ccc;
+      border-radius: 5px;
+    box-shadow: 1px 1px 20px rgba(230, 11, 11, 0.3);
+}
+
